content/_generated-doc/2.7/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.datasource]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.datasource[quarkus.hibernate-orm.datasource]`

[.description]
--

--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.packages]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.packages[quarkus.hibernate-orm.packages]`

[.description]
--

--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.sql-load-script]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.sql-load-script[quarkus.hibernate-orm.sql-load-script]`

[.description]
--
Path to a file containing the SQL statements to execute when Hibernate ORM starts.

The file is retrieved from the classpath resources,
so it must be located in the resources directory (e.g. `src/main/resources`).

The default value for this setting differs depending on the Quarkus launch mode:

* In dev and test modes, it defaults to `import.sql`.
  Simply add an `import.sql` file in the root of your resources directory
  and it will be picked up without having to set this property.
  Pass `no-file` to force Hibernate ORM to ignore the SQL import file.
* In production mode, it defaults to `no-file`.
  It means Hibernate ORM won't try to execute any SQL import file by default.
  Pass an explicit value to force Hibernate ORM to execute the SQL import file.

If you need different SQL statements between dev mode, test (`@QuarkusTest`) and in production, use Quarkus
https://quarkus.io/guides/config#configuration-profiles[configuration profiles facility].

[source,property]
.application.properties
----
%dev.quarkus.hibernate-orm.sql-load-script = import-dev.sql
%test.quarkus.hibernate-orm.sql-load-script = import-test.sql
%prod.quarkus.hibernate-orm.sql-load-script = no-file
----

[NOTE]
====
Quarkus supports `.sql` file with SQL statements or comments spread over multiple lines.
Each SQL statement must be terminated by a semicolon.
====
--|list of string 
|`import.sql in DEV, TEST ; no-file otherwise`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.physical-naming-strategy]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.physical-naming-strategy[quarkus.hibernate-orm.physical-naming-strategy]`

[.description]
--
Pluggable strategy contract for applying physical naming rules for database object names. Class name of the Hibernate PhysicalNamingStrategy implementation
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.implicit-naming-strategy]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.implicit-naming-strategy[quarkus.hibernate-orm.implicit-naming-strategy]`

[.description]
--
Pluggable strategy for applying implicit naming rules when an explicit name is not given. Class name of the Hibernate ImplicitNamingStrategy implementation
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.metadata-builder-contributor]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.metadata-builder-contributor[quarkus.hibernate-orm.metadata-builder-contributor]`

[.description]
--
Class name of a custom
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/spi/MetadataBuilderContributor.html[`org.hibernate.boot.spi.MetadataBuilderContributor`]
implementation.

[NOTE]
====
Not all customization options exposed by
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/MetadataBuilder.html[`org.hibernate.boot.MetadataBuilder`]
will work correctly. Stay clear of options related to classpath scanning in particular.

This setting is exposed mainly to allow registration of types, converters and SQL functions.
====
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.mapping-files]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.mapping-files[quarkus.hibernate-orm.mapping-files]`

[.description]
--
XML files to configure the entity mapping, e.g. `META-INF/my-orm.xml`. 
 Defaults to `META-INF/orm.xml` if it exists. Pass `no-file` to force Hibernate ORM to ignore `META-INF/orm.xml`.
--|list of string 
|`META-INF/orm.xml if it exists; no-file otherwise`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.second-level-caching-enabled]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.second-level-caching-enabled[quarkus.hibernate-orm.second-level-caching-enabled]`

[.description]
--
The default in Quarkus is for 2nd level caching to be enabled, and a good implementation is already integrated for you. 
 Just cherry-pick which entities should be using the cache. 
 Set this to false to disable all 2nd level caches.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.multitenant]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.multitenant[quarkus.hibernate-orm.multitenant]`

[.description]
--
Defines the method for multi-tenancy (DATABASE, NONE, SCHEMA). The complete list of allowed values is available in the
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/MultiTenancyStrategy.html[Hibernate ORM JavaDoc].
The type DISCRIMINATOR is currently not supported. The default value is NONE (no multi-tenancy).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.multitenant-schema-datasource]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.multitenant-schema-datasource[quarkus.hibernate-orm.multitenant-schema-datasource]`

[.description]
--
Defines the name of the datasource to use in case of SCHEMA approach. The datasource of the persistence unit will be used if not set.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.validate-in-dev-mode]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.validate-in-dev-mode[quarkus.hibernate-orm.validate-in-dev-mode]`

[.description]
--
If hibernate is not auto generating the schema, and Quarkus is running in development mode then Quarkus will attempt to validate the database after startup and print a log message if there are any problems.
--|boolean 
|`true`


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.dialect-dialect-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.dialect-dialect-related-configuration[Dialect related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.dialect]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.dialect[quarkus.hibernate-orm.dialect]`

[.description]
--
Class name of the Hibernate ORM dialect. The complete list of bundled dialects is available in the
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/dialect/package-summary.html[Hibernate ORM
JavaDoc].

[NOTE]
====
Not all the dialects are supported in GraalVM native executables: we currently provide driver extensions for
PostgreSQL,
MariaDB, Microsoft SQL Server and H2.
====
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.dialect.storage-engine]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.dialect.storage-engine[quarkus.hibernate-orm.dialect.storage-engine]`

[.description]
--
The storage engine to use when the dialect supports multiple storage engines.

E.g. `MyISAM` or `InnoDB` for MySQL.
--|string 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.query-query-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.query-query-related-configuration[Query related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.query.query-plan-cache-max-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.query.query-plan-cache-max-size[quarkus.hibernate-orm.query.query-plan-cache-max-size]`

[.description]
--
The maximum size of the query plan cache. see ++#++`QueryPlanCache++#++DEFAULT_QUERY_PLAN_MAX_COUNT`
--|int 
|`2048`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.query.default-null-ordering]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.query.default-null-ordering[quarkus.hibernate-orm.query.default-null-ordering]`

[.description]
--
Default precedence of null values in `ORDER BY` clauses.

Valid values are: `none`, `first`, `last`.
--|`none`, `first`, `last` 
|`none`


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database-database-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database-database-related-configuration[Database related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.charset]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.charset[quarkus.hibernate-orm.database.charset]`

[.description]
--
The charset of the database. 
 Used for DDL generation and also for the SQL import scripts.
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.globally-quoted-identifiers]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.globally-quoted-identifiers[quarkus.hibernate-orm.database.globally-quoted-identifiers]`

[.description]
--
Whether Hibernate should quote all identifiers.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.generation]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.generation[quarkus.hibernate-orm.database.generation]`

[.description]
--
Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. This defaults to 'none', however if Dev Services is in use and no other extensions that manage the schema are present this will default to 'drop-and-create'. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.generation.create-schemas]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.generation.create-schemas[quarkus.hibernate-orm.database.generation.create-schemas]`

[.description]
--
If Hibernate ORM should create the schemas automatically (for databases supporting them).
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.generation.halt-on-error]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.generation.halt-on-error[quarkus.hibernate-orm.database.generation.halt-on-error]`

[.description]
--
Whether we should stop on the first error when applying the schema.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.default-catalog]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.default-catalog[quarkus.hibernate-orm.database.default-catalog]`

[.description]
--
The default catalog to use for the database objects.
--|string 
|


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.default-schema]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.database.default-schema[quarkus.hibernate-orm.database.default-schema]`

[.description]
--
The default schema to use for the database objects.
--|string 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.jdbc-jdbc-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.jdbc-jdbc-related-configuration[JDBC related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.jdbc.timezone]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.jdbc.timezone[quarkus.hibernate-orm.jdbc.timezone]`

[.description]
--
The time zone pushed to the JDBC driver.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.jdbc.statement-fetch-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.jdbc.statement-fetch-size[quarkus.hibernate-orm.jdbc.statement-fetch-size]`

[.description]
--
How many rows are fetched at a time by the JDBC driver.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.jdbc.statement-batch-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.jdbc.statement-batch-size[quarkus.hibernate-orm.jdbc.statement-batch-size]`

[.description]
--
The number of updates (inserts, updates and deletes) that are sent by the JDBC driver at one time for execution.
--|int 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.fetch-fetching-logic-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.fetch-fetching-logic-configuration[Fetching logic configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.fetch.batch-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.fetch.batch-size[quarkus.hibernate-orm.fetch.batch-size]`

[.description]
--
The size of the batches used when loading entities and collections.

`-1` means batch loading is disabled.
--|int 
|`16`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.fetch.max-depth]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.fetch.max-depth[quarkus.hibernate-orm.fetch.max-depth]`

[.description]
--
The maximum depth of outer join fetch tree for single-ended associations (one-to-one, many-to-one).

A `0` disables default outer join fetching.
--|int 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.cache-caching-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.cache-caching-configuration[Caching configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.cache.-cache-.expiration.max-idle]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.cache.-cache-.expiration.max-idle[quarkus.hibernate-orm.cache."cache".expiration.max-idle]`

[.description]
--
The maximum time before an object of the cache is considered expired.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.cache.-cache-.memory.object-count]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.cache.-cache-.memory.object-count[quarkus.hibernate-orm.cache."cache".memory.object-count]`

[.description]
--
The maximum number of objects kept in memory in the cache.
--|long 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.discriminator-discriminator-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.discriminator-discriminator-related-configuration[Discriminator related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined[quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined]`

[.description]
--
Existing applications rely (implicitly or explicitly) on Hibernate ignoring any DiscriminatorColumn declarations on joined inheritance hierarchies. This setting allows these applications to maintain the legacy behavior of DiscriminatorColumn annotations being ignored when paired with joined inheritance.
--|boolean 
|`false`


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.persistence-units-additional-named-persistence-units]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.persistence-units-additional-named-persistence-units[Additional named persistence units]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.datasource]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.datasource[quarkus.hibernate-orm."persistence-unit-name".datasource]`

[.description]
--

--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.packages]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.packages[quarkus.hibernate-orm."persistence-unit-name".packages]`

[.description]
--

--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.sql-load-script]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.sql-load-script[quarkus.hibernate-orm."persistence-unit-name".sql-load-script]`

[.description]
--
Path to a file containing the SQL statements to execute when Hibernate ORM starts.

The file is retrieved from the classpath resources,
so it must be located in the resources directory (e.g. `src/main/resources`).

The default value for this setting differs depending on the Quarkus launch mode:

* In dev and test modes, it defaults to `import.sql`.
  Simply add an `import.sql` file in the root of your resources directory
  and it will be picked up without having to set this property.
  Pass `no-file` to force Hibernate ORM to ignore the SQL import file.
* In production mode, it defaults to `no-file`.
  It means Hibernate ORM won't try to execute any SQL import file by default.
  Pass an explicit value to force Hibernate ORM to execute the SQL import file.

If you need different SQL statements between dev mode, test (`@QuarkusTest`) and in production, use Quarkus
https://quarkus.io/guides/config#configuration-profiles[configuration profiles facility].

[source,property]
.application.properties
----
%dev.quarkus.hibernate-orm.sql-load-script = import-dev.sql
%test.quarkus.hibernate-orm.sql-load-script = import-test.sql
%prod.quarkus.hibernate-orm.sql-load-script = no-file
----

[NOTE]
====
Quarkus supports `.sql` file with SQL statements or comments spread over multiple lines.
Each SQL statement must be terminated by a semicolon.
====
--|list of string 
|`import.sql in DEV, TEST ; no-file otherwise`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.physical-naming-strategy]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.physical-naming-strategy[quarkus.hibernate-orm."persistence-unit-name".physical-naming-strategy]`

[.description]
--
Pluggable strategy contract for applying physical naming rules for database object names. Class name of the Hibernate PhysicalNamingStrategy implementation
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.implicit-naming-strategy]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.implicit-naming-strategy[quarkus.hibernate-orm."persistence-unit-name".implicit-naming-strategy]`

[.description]
--
Pluggable strategy for applying implicit naming rules when an explicit name is not given. Class name of the Hibernate ImplicitNamingStrategy implementation
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.metadata-builder-contributor]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.metadata-builder-contributor[quarkus.hibernate-orm."persistence-unit-name".metadata-builder-contributor]`

[.description]
--
Class name of a custom
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/spi/MetadataBuilderContributor.html[`org.hibernate.boot.spi.MetadataBuilderContributor`]
implementation.

[NOTE]
====
Not all customization options exposed by
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/MetadataBuilder.html[`org.hibernate.boot.MetadataBuilder`]
will work correctly. Stay clear of options related to classpath scanning in particular.

This setting is exposed mainly to allow registration of types, converters and SQL functions.
====
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.mapping-files]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.mapping-files[quarkus.hibernate-orm."persistence-unit-name".mapping-files]`

[.description]
--
XML files to configure the entity mapping, e.g. `META-INF/my-orm.xml`. 
 Defaults to `META-INF/orm.xml` if it exists. Pass `no-file` to force Hibernate ORM to ignore `META-INF/orm.xml`.
--|list of string 
|`META-INF/orm.xml if it exists; no-file otherwise`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.second-level-caching-enabled]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.second-level-caching-enabled[quarkus.hibernate-orm."persistence-unit-name".second-level-caching-enabled]`

[.description]
--
The default in Quarkus is for 2nd level caching to be enabled, and a good implementation is already integrated for you. 
 Just cherry-pick which entities should be using the cache. 
 Set this to false to disable all 2nd level caches.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.multitenant]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.multitenant[quarkus.hibernate-orm."persistence-unit-name".multitenant]`

[.description]
--
Defines the method for multi-tenancy (DATABASE, NONE, SCHEMA). The complete list of allowed values is available in the
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/MultiTenancyStrategy.html[Hibernate ORM JavaDoc].
The type DISCRIMINATOR is currently not supported. The default value is NONE (no multi-tenancy).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.multitenant-schema-datasource]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.multitenant-schema-datasource[quarkus.hibernate-orm."persistence-unit-name".multitenant-schema-datasource]`

[.description]
--
Defines the name of the datasource to use in case of SCHEMA approach. The datasource of the persistence unit will be used if not set.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.validate-in-dev-mode]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.validate-in-dev-mode[quarkus.hibernate-orm."persistence-unit-name".validate-in-dev-mode]`

[.description]
--
If hibernate is not auto generating the schema, and Quarkus is running in development mode then Quarkus will attempt to validate the database after startup and print a log message if there are any problems.
--|boolean 
|`true`


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.dialect-dialect-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.dialect-dialect-related-configuration[Dialect related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.dialect]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.dialect[quarkus.hibernate-orm."persistence-unit-name".dialect]`

[.description]
--
Class name of the Hibernate ORM dialect. The complete list of bundled dialects is available in the
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/dialect/package-summary.html[Hibernate ORM
JavaDoc].

[NOTE]
====
Not all the dialects are supported in GraalVM native executables: we currently provide driver extensions for
PostgreSQL,
MariaDB, Microsoft SQL Server and H2.
====
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.dialect.storage-engine]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.dialect.storage-engine[quarkus.hibernate-orm."persistence-unit-name".dialect.storage-engine]`

[.description]
--
The storage engine to use when the dialect supports multiple storage engines.

E.g. `MyISAM` or `InnoDB` for MySQL.
--|string 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.query-query-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.query-query-related-configuration[Query related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.query.query-plan-cache-max-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.query.query-plan-cache-max-size[quarkus.hibernate-orm."persistence-unit-name".query.query-plan-cache-max-size]`

[.description]
--
The maximum size of the query plan cache. see ++#++`QueryPlanCache++#++DEFAULT_QUERY_PLAN_MAX_COUNT`
--|int 
|`2048`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.query.default-null-ordering]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.query.default-null-ordering[quarkus.hibernate-orm."persistence-unit-name".query.default-null-ordering]`

[.description]
--
Default precedence of null values in `ORDER BY` clauses.

Valid values are: `none`, `first`, `last`.
--|`none`, `first`, `last` 
|`none`


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database-database-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database-database-related-configuration[Database related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.charset]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.charset[quarkus.hibernate-orm."persistence-unit-name".database.charset]`

[.description]
--
The charset of the database. 
 Used for DDL generation and also for the SQL import scripts.
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.globally-quoted-identifiers]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.globally-quoted-identifiers[quarkus.hibernate-orm."persistence-unit-name".database.globally-quoted-identifiers]`

[.description]
--
Whether Hibernate should quote all identifiers.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.generation]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.generation[quarkus.hibernate-orm."persistence-unit-name".database.generation]`

[.description]
--
Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. This defaults to 'none', however if Dev Services is in use and no other extensions that manage the schema are present this will default to 'drop-and-create'. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.create-schemas]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.create-schemas[quarkus.hibernate-orm."persistence-unit-name".database.generation.create-schemas]`

[.description]
--
If Hibernate ORM should create the schemas automatically (for databases supporting them).
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.halt-on-error]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.halt-on-error[quarkus.hibernate-orm."persistence-unit-name".database.generation.halt-on-error]`

[.description]
--
Whether we should stop on the first error when applying the schema.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.default-catalog]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.default-catalog[quarkus.hibernate-orm."persistence-unit-name".database.default-catalog]`

[.description]
--
The default catalog to use for the database objects.
--|string 
|


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.default-schema]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.database.default-schema[quarkus.hibernate-orm."persistence-unit-name".database.default-schema]`

[.description]
--
The default schema to use for the database objects.
--|string 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.jdbc-jdbc-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.jdbc-jdbc-related-configuration[JDBC related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.timezone]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.timezone[quarkus.hibernate-orm."persistence-unit-name".jdbc.timezone]`

[.description]
--
The time zone pushed to the JDBC driver.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.statement-fetch-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.statement-fetch-size[quarkus.hibernate-orm."persistence-unit-name".jdbc.statement-fetch-size]`

[.description]
--
How many rows are fetched at a time by the JDBC driver.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.statement-batch-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.statement-batch-size[quarkus.hibernate-orm."persistence-unit-name".jdbc.statement-batch-size]`

[.description]
--
The number of updates (inserts, updates and deletes) that are sent by the JDBC driver at one time for execution.
--|int 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.fetch-fetching-logic-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.fetch-fetching-logic-configuration[Fetching logic configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.fetch.batch-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.fetch.batch-size[quarkus.hibernate-orm."persistence-unit-name".fetch.batch-size]`

[.description]
--
The size of the batches used when loading entities and collections.

`-1` means batch loading is disabled.
--|int 
|`16`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.fetch.max-depth]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.fetch.max-depth[quarkus.hibernate-orm."persistence-unit-name".fetch.max-depth]`

[.description]
--
The maximum depth of outer join fetch tree for single-ended associations (one-to-one, many-to-one).

A `0` disables default outer join fetching.
--|int 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.cache-caching-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.cache-caching-configuration[Caching configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.cache.-cache-.expiration.max-idle]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.cache.-cache-.expiration.max-idle[quarkus.hibernate-orm."persistence-unit-name".cache."cache".expiration.max-idle]`

[.description]
--
The maximum time before an object of the cache is considered expired.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.cache.-cache-.memory.object-count]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.cache.-cache-.memory.object-count[quarkus.hibernate-orm."persistence-unit-name".cache."cache".memory.object-count]`

[.description]
--
The maximum number of objects kept in memory in the cache.
--|long 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.discriminator-discriminator-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.discriminator-discriminator-related-configuration[Discriminator related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.discriminator.ignore-explicit-for-joined]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.discriminator.ignore-explicit-for-joined[quarkus.hibernate-orm."persistence-unit-name".discriminator.ignore-explicit-for-joined]`

[.description]
--
Existing applications rely (implicitly or explicitly) on Hibernate ignoring any DiscriminatorColumn declarations on joined inheritance hierarchies. This setting allows these applications to maintain the legacy behavior of DiscriminatorColumn annotations being ignored when paired with joined inheritance.
--|boolean 
|`false`


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.scripts-database-scripts-related-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.scripts-database-scripts-related-configuration[Database scripts related configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation[quarkus.hibernate-orm."persistence-unit-name".scripts.generation]`

[.description]
--
Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.create-target]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.create-target[quarkus.hibernate-orm."persistence-unit-name".scripts.generation.create-target]`

[.description]
--
Filename or URL where the database create DDL file should be generated.
--|string 
|


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.drop-target]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.drop-target[quarkus.hibernate-orm."persistence-unit-name".scripts.generation.drop-target]`

[.description]
--
Filename or URL where the database drop DDL file should be generated.
--|string 
|


h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log-logging-configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log-logging-configuration[Logging configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log.sql]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log.sql[quarkus.hibernate-orm."persistence-unit-name".log.sql]`

[.description]
--
Show SQL logs and format them nicely. 
 Setting it to true is obviously not recommended in production.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log.format-sql]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log.format-sql[quarkus.hibernate-orm."persistence-unit-name".log.format-sql]`

[.description]
--
Format the SQL logs if SQL log is enabled
--|boolean 
|`true`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log.jdbc-warnings]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log.jdbc-warnings[quarkus.hibernate-orm."persistence-unit-name".log.jdbc-warnings]`

[.description]
--
Whether JDBC warnings should be collected and logged.
--|boolean 
|`depends on dialect`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log.queries-slower-than-ms]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit_quarkus.hibernate-orm.-persistence-unit-name-.log.queries-slower-than-ms[quarkus.hibernate-orm."persistence-unit-name".log.queries-slower-than-ms]`

[.description]
--
If set, Hibernate will log queries that took more than specified number of milliseconds to execute.
--|long 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
